[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.8"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/epoint"

[workspace.dependencies]
ecoord = { version = "0.0.1-alpha.8" }

clap = "4.5.42"
indicatif = "0.18.0"
humantime = "2.2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
itertools = "0.14.0"
polars = "0.49.1"
parry3d-f64 = "0.22.0"
tokio = "1.47.1"
ndarray = "0.16.1"
nalgebra = "0.34.0"
palette = "0.7.6"
chrono = "0.4.41"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.10.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.142"
las = "0.9.5"
e57 = "0.11.10"
tar = "0.4.44"
zstd = "0.13.3"
approx = "0.5.1"
walkdir = "2.5.0"
