[package]
name = "epoint-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for processing 3D point clouds."


[dependencies]
epoint = { version = "0.0.1-alpha.4", path = "../epoint" }

clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nalgebra = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }

# todo
polars = { workspace = true, features = ["lazy", "parquet", "ndarray", "dtype-categorical", "dtype-u16", "strings", "partition_by", "is_between"] }
