[package]
name = "epoint-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives and operations for processing 3D point clouds."


[dependencies]
ecoord = { workspace = true }

thiserror = { workspace = true }
polars = { workspace = true, features = ["lazy", "parquet", "ndarray", "dtype-categorical", "dtype-u16", "strings", "partition_by", "is_between"] }
parry3d-f64 = { workspace = true }
ndarray = { workspace = true }
palette = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
approx = { workspace = true }
indextree = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
