[package]
name = "epoint-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IO related logic for the epoint library"


[dependencies]
epoint-core = { version = "0.0.1-alpha.1", path = "../epoint-core", registry = "custom" }
epoint-transform = { version = "0.0.1-alpha.1", path = "../epoint-transform", registry = "custom" }

ecoord = { workspace = true }

thiserror = { workspace = true }
polars = { workspace = true, features = ["lazy", "csv-file", "parquet", "ndarray", "dtype-categorical", "partition_by"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
