[package]
name = "epoint-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IO operations for processing 3D point clouds."


[dependencies]
epoint-core = { version = "0.0.1-alpha.9", path = "../epoint-core" }
epoint-transform = { version = "0.0.1-alpha.9", path = "../epoint-transform" }

ecoord = { workspace = true }

thiserror = { workspace = true }
polars = { workspace = true, features = ["lazy", "parquet", "ndarray", "dtype-categorical", "dtype-u16", "dtype-u8", "partition_by"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
las = { workspace = true, features = ["laz-parallel"] }
e57 = { workspace = true, features = ["crc32c"] }
rayon = { workspace = true }
palette = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
chrono = { workspace = true }
nalgebra = { workspace = true }

