[package]
name = "epoint-transform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transformations for the epoint library"


[dependencies]
epoint-core = { version = "0.0.1-alpha.1", path = "../epoint-core", registry = "custom" }

ecoord = { workspace = true }

thiserror = { workspace = true }
polars = { workspace = true, features = ["lazy", "csv-file", "parquet", "ndarray"] }
chrono = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
