[package]
name = "epoint"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing point clouds"

[features]
database = []


[dependencies]
epoint-core = { version = "0.0.1-alpha.1", path = "../epoint-core", registry = "custom" }
epoint-transform = { version = "0.0.1-alpha.1", path = "../epoint-transform", registry = "custom" }
epoint-io = { version = "0.0.1-alpha.1", path = "../epoint-io", registry = "custom" }
