[package]
name = "epoint"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing 3D point clouds."


[dependencies]
epoint-core = { version = "0.0.1-alpha.10", path = "../epoint-core" }
epoint-transform = { version = "0.0.1-alpha.10", path = "../epoint-transform" }
epoint-io = { version = "0.0.1-alpha.10", path = "../epoint-io" }
